--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.210",
     "@swc/jest": "^0.2.21",
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/supertest": "^2.0.12",
     "jest": "^28.1.2",
     "ts-node": "^10.8.2",
     "tslint": "^6.1.3",
@@ -11,14 +13,20 @@
   },
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "nodemon src/infrastructure/api/server.ts"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.2",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.8",
+    "supertest": "^6.2.4",
     "uuid": "^8.3.2"
   }
 }
