--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@swc/jest": "^0.2.21",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/jstoxml": "^2.0.2",
     "@types/supertest": "^2.0.12",
     "jest": "^28.1.2",
     "ts-node": "^10.8.2",
@@ -21,12 +22,14 @@
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jstoxml": "^3.2.3",
     "nodemon": "^2.0.19",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.21.2",
     "sequelize-typescript": "^2.1.3",
     "sqlite3": "^5.0.8",
     "supertest": "^6.2.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   }
 }
